--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,9 +4,25 @@ body {
 a {
     display: block;
     padding: 10px 10px 20px;
-    margin: 5px;
+    margin: auto;
     max-width: 500px;
     border-radius: 5px;
     text-decoration: none;
     color: black;
+}
+#form {
+    margin: 0 auto;
+    max-width: 500px;
+    text-align: center;
+    margin-bottom: 50px
+}
+
+#endpoint {
+    max-width: 500px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#title {
+    text-align: center;
 }
